--- a/study/study/study.vcxproj
+++ b/study/study/study.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Loan.h" />
     <ClInclude Include="MyPoint.h" />
     <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="StackOfIntegers.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="StopWatch.h" />
     <ClInclude Include="targetver.h" />
@@ -160,6 +161,7 @@
     <ClCompile Include="Loan.cpp" />
     <ClCompile Include="MyPoint.cpp" />
     <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="StackOfIntegers.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
