--- a/study/study/study.vcxproj.filters
+++ b/study/study/study.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="StopWatch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="StackOfIntegers.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -57,6 +60,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="StopWatch.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="StackOfIntegers.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
