무시 폴더 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-﻿################################################################################
+﻿﻿################################################################################
+
 # 이 .gitignore 파일은 Microsoft(R) Visual Studio에서 자동으로 만들어졌습니다.
 ################################################################################
 
 /study/.vs/study/v15/Browse.VC.opendb
+
+/study/study/debug/*.*
+
+/study/debug/*.*
