--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@
 ################################################################################
 
 /study/algorithm/Debug/algorithm.pdb
+/study/algorithm/Debug/algorithm.ilk
+/study/algorithm/Debug/algorithm.exe
+/study/algorithm/algorithm/Debug/vc141.pdb
+/study/algorithm/algorithm/Debug/vc141.idb
+/study/algorithm/algorithm/Debug/stdafx.obj
+/study/algorithm/algorithm/Debug/algorithm.tlog/link.write.1.tlog
+/study/algorithm/algorithm/Debug/algorithm.tlog/link.read.1.tlog
+/study/algorithm/algorithm/Debug/algorithm.tlog/link.command.1.tlog
+/study/algorithm/algorithm/Debug/algorithm.tlog/CL.write.1.tlog
+/study/algorithm/algorithm/Debug/algorithm.tlog/CL.read.1.tlog
+/study/algorithm/algorithm/Debug/algorithm.tlog/CL.command.1.tlog
+/study/algorithm/algorithm/Debug/algorithm.tlog/algorithm.lastbuildstate
+/study/algorithm/algorithm/Debug/algorithm.pch
+/study/algorithm/algorithm/Debug/algorithm.obj
+/study/algorithm/algorithm/Debug/algorithm.log
+/study/algorithm/.vs/algorithm/v15/Browse.VC.opendb
