아직 하나 남았다....:

--- a/study_API/study_API/study_API.vcxproj
+++ b/study_API/study_API/study_API.vcxproj
@@ -115,7 +115,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="API_Q3_1.cpp" />
+    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Empty_Window.cpp" />
+    <ClCompile Include="ex_3_5.cpp" />
     <ClCompile Include="test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Circle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
