--- a/bitmap/bitmap/bitmap.vcxproj
+++ b/bitmap/bitmap/bitmap.vcxproj
@@ -115,17 +115,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="API2D.cpp" />
     <ClCompile Include="winmain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="API2D.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="bitmap.rc" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="prince.bmp" />
-    <Image Include="prince2.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
