--- a/bitmap/bitmap/bitmap.vcxproj.filters
+++ b/bitmap/bitmap/bitmap.vcxproj.filters
@@ -18,8 +18,14 @@
     <ClCompile Include="winmain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="API2D.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="API2D.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -28,13 +34,5 @@
     <ResourceCompile Include="bitmap.rc">
       <Filter>리소스 파일</Filter>
     </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="prince.bmp">
-      <Filter>리소스 파일</Filter>
-    </Image>
-    <Image Include="prince2.bmp">
-      <Filter>리소스 파일</Filter>
-    </Image>
   </ItemGroup>
 </Project>
