--- a/Tetris_clone/Tetris_clone/Tetris_clone.vcxproj.filters
+++ b/Tetris_clone/Tetris_clone/Tetris_clone.vcxproj.filters
@@ -27,12 +27,24 @@
     <ClInclude Include="Tetris_clone.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="tBlocks.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Manager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Tetris_clone.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="tBlocks.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Manager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
