--- a/외길인생_검투사의길/WINAPI_2D/WINAPI_2D.vcxproj
+++ b/외길인생_검투사의길/WINAPI_2D/WINAPI_2D.vcxproj
@@ -147,20 +147,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cBattleScene.h" />
     <ClInclude Include="cManager.h" />
+    <ClInclude Include="cTitleScene.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="cShopScene.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="cTownScene.h" />
     <ClInclude Include="WINAPI_2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cBattleScene.cpp" />
     <ClCompile Include="cManager.cpp" />
+    <ClCompile Include="cTitleScene.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="cShopScene.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="cTownScene.cpp" />
     <ClCompile Include="WINAPI_2D.cpp" />
   </ItemGroup>
   <ItemGroup>
