--- a/외길인생_검투사의길/WINAPI_2D/WINAPI_2D.vcxproj.filters
+++ b/외길인생_검투사의길/WINAPI_2D/WINAPI_2D.vcxproj.filters
@@ -33,13 +33,13 @@
     <ClInclude Include="SceneManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="cBattleScene.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="cShopScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="cTitleScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="BattleManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -56,13 +56,13 @@
     <ClCompile Include="SceneManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="cBattleScene.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="cShopScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cTitleScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="BattleManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
