--- a/DirectX/dx_study/dx_study.vcxproj
+++ b/DirectX/dx_study/dx_study.vcxproj
@@ -141,12 +141,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cMainGame.h" />
     <ClInclude Include="cMatrix.h" />
     <ClInclude Include="cVector3.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="cMatrix.cpp" />
     <ClCompile Include="cVector3.cpp" />
     <ClCompile Include="dx_study.cpp" />
