--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj
@@ -143,6 +143,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cCamera.h" />
+    <ClInclude Include="cCubePC.h" />
+    <ClInclude Include="cDeviceManager.h" />
     <ClInclude Include="cMainGame.h" />
     <ClInclude Include="DX_3D_STUDY.h" />
     <ClInclude Include="Resource.h" />
@@ -150,6 +153,9 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cCamera.cpp" />
+    <ClCompile Include="cCubePC.cpp" />
+    <ClCompile Include="cDeviceManager.cpp" />
     <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="DX_3D_STUDY.cpp" />
     <ClCompile Include="stdafx.cpp">
