--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="cCamera.h" />
     <ClInclude Include="cCubePC.h" />
     <ClInclude Include="cDeviceManager.h" />
+    <ClInclude Include="cGrid.h" />
     <ClInclude Include="cMainGame.h" />
     <ClInclude Include="DX_3D_STUDY.h" />
     <ClInclude Include="Resource.h" />
@@ -156,6 +157,7 @@
     <ClCompile Include="cCamera.cpp" />
     <ClCompile Include="cCubePC.cpp" />
     <ClCompile Include="cDeviceManager.cpp" />
+    <ClCompile Include="cGrid.cpp" />
     <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="DX_3D_STUDY.cpp" />
     <ClCompile Include="stdafx.cpp">
