let me have one man

--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj
@@ -143,6 +143,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cBoxman.h" />
     <ClInclude Include="cCamera.h" />
     <ClInclude Include="cCubePC.h" />
     <ClInclude Include="cDeviceManager.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cBoxman.cpp" />
     <ClCompile Include="cCamera.cpp" />
     <ClCompile Include="cCubePC.cpp" />
     <ClCompile Include="cDeviceManager.cpp" />
