--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj.filters
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="cMap.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="cCubeObj.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -108,6 +111,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cMap.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cCubeObj.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
