--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj
@@ -146,6 +146,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Asciitok.h" />
     <ClInclude Include="cBoxman.h" />
     <ClInclude Include="cCamera.h" />
     <ClInclude Include="cCharacter.h" />
