--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj
@@ -147,6 +147,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asciitok.h" />
+    <ClInclude Include="cASELoader.h" />
+    <ClInclude Include="cASE_Char.h" />
     <ClInclude Include="cBoxman.h" />
     <ClInclude Include="cCamera.h" />
     <ClInclude Include="cCharacter.h" />
@@ -158,7 +160,6 @@
     <ClInclude Include="cMainGame.h" />
     <ClInclude Include="cMap.h" />
     <ClInclude Include="DX_3D_STUDY.h" />
-    <ClInclude Include="MaterialLoader.h" />
     <ClInclude Include="ObjLoader.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -166,6 +167,8 @@
     <ClInclude Include="TextureLoader.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cASELoader.cpp" />
+    <ClCompile Include="cASE_Char.cpp" />
     <ClCompile Include="cBoxman.cpp" />
     <ClCompile Include="cCamera.cpp" />
     <ClCompile Include="cCubeObj.cpp" />
@@ -176,7 +179,6 @@
     <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="cMap.cpp" />
     <ClCompile Include="DX_3D_STUDY.cpp" />
-    <ClCompile Include="MaterialLoader.cpp" />
     <ClCompile Include="ObjLoader.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
