매쉬 만들어서 하이트맵 적용하기 -> 작업 중, 빌드는 되지만 실행은 에러남

--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj
@@ -158,12 +158,14 @@
     <ClInclude Include="cDeviceManager.h" />
     <ClInclude Include="cFrame.h" />
     <ClInclude Include="cGrid.h" />
+    <ClInclude Include="cHeightMap.h" />
     <ClInclude Include="cHexagon.h" />
     <ClInclude Include="cMainGame.h" />
     <ClInclude Include="cMap.h" />
     <ClInclude Include="cMtlTex.h" />
     <ClInclude Include="cObject.h" />
     <ClInclude Include="cObjectManager.h" />
+    <ClInclude Include="cRawLoader.h" />
     <ClInclude Include="cTextureManager_inst.h" />
     <ClInclude Include="DX_3D_STUDY.h" />
     <ClInclude Include="ObjLoader.h" />
@@ -183,12 +185,14 @@
     <ClCompile Include="cDeviceManager.cpp" />
     <ClCompile Include="cFrame.cpp" />
     <ClCompile Include="cGrid.cpp" />
+    <ClCompile Include="cHeightMap.cpp" />
     <ClCompile Include="cHexagon.cpp" />
     <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="cMap.cpp" />
     <ClCompile Include="cMtlTex.cpp" />
     <ClCompile Include="cObject.cpp" />
     <ClCompile Include="cObjectManager.cpp" />
+    <ClCompile Include="cRawLoader.cpp" />
     <ClCompile Include="cTextureManager_inst.cpp" />
     <ClCompile Include="DX_3D_STUDY.cpp" />
     <ClCompile Include="ObjLoader.cpp" />
