--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj
@@ -29,7 +29,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>NotSet</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asciitok.h" />
+    <ClInclude Include="cAllocateHierarchy.h" />
     <ClInclude Include="cASELoader.h" />
     <ClInclude Include="cAseLoader_inst.h" />
     <ClInclude Include="cASE_Char.h" />
@@ -160,13 +161,16 @@
     <ClInclude Include="cGrid.h" />
     <ClInclude Include="cHeightMap.h" />
     <ClInclude Include="cHexagon.h" />
+    <ClInclude Include="cLoadXFile.h" />
     <ClInclude Include="cMainGame.h" />
     <ClInclude Include="cMap.h" />
     <ClInclude Include="cMtlTex.h" />
     <ClInclude Include="cObject.h" />
     <ClInclude Include="cObjectManager.h" />
     <ClInclude Include="cRawLoader.h" />
+    <ClInclude Include="cSkinnedMesh.h" />
     <ClInclude Include="cTextureManager_inst.h" />
+    <ClInclude Include="cTimerManager.h" />
     <ClInclude Include="DX_3D_STUDY.h" />
     <ClInclude Include="ObjLoader.h" />
     <ClInclude Include="Resource.h" />
@@ -175,6 +179,7 @@
     <ClInclude Include="TextureLoader.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cAllocateHierarchy.cpp" />
     <ClCompile Include="cASELoader.cpp" />
     <ClCompile Include="cAseLoader_inst.cpp" />
     <ClCompile Include="cASE_Char.cpp" />
@@ -187,13 +192,16 @@
     <ClCompile Include="cGrid.cpp" />
     <ClCompile Include="cHeightMap.cpp" />
     <ClCompile Include="cHexagon.cpp" />
+    <ClCompile Include="cLoadXFile.cpp" />
     <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="cMap.cpp" />
     <ClCompile Include="cMtlTex.cpp" />
     <ClCompile Include="cObject.cpp" />
     <ClCompile Include="cObjectManager.cpp" />
     <ClCompile Include="cRawLoader.cpp" />
+    <ClCompile Include="cSkinnedMesh.cpp" />
     <ClCompile Include="cTextureManager_inst.cpp" />
+    <ClCompile Include="cTimerManager.cpp" />
     <ClCompile Include="DX_3D_STUDY.cpp" />
     <ClCompile Include="ObjLoader.cpp" />
     <ClCompile Include="stdafx.cpp">
