frustum culling 기능 연습 추가

--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="cCubePC.h" />
     <ClInclude Include="cDeviceManager.h" />
     <ClInclude Include="cFrame.h" />
+    <ClInclude Include="cFrustumCulling.h" />
     <ClInclude Include="cGrid.h" />
     <ClInclude Include="cHeightMap.h" />
     <ClInclude Include="cHexagon.h" />
@@ -189,6 +190,7 @@
     <ClCompile Include="cCubePC.cpp" />
     <ClCompile Include="cDeviceManager.cpp" />
     <ClCompile Include="cFrame.cpp" />
+    <ClCompile Include="cFrustumCulling.cpp" />
     <ClCompile Include="cGrid.cpp" />
     <ClCompile Include="cHeightMap.cpp" />
     <ClCompile Include="cHexagon.cpp" />
