OBB 캐릭터 만들기... 실패

--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj
@@ -162,16 +162,20 @@
     <ClInclude Include="cGrid.h" />
     <ClInclude Include="cHeightMap.h" />
     <ClInclude Include="cHexagon.h" />
+    <ClInclude Include="iMap.h" />
     <ClInclude Include="cLoadXFile.h" />
     <ClInclude Include="cMainGame.h" />
     <ClInclude Include="cMap.h" />
     <ClInclude Include="cMtlTex.h" />
+    <ClInclude Include="cOBB.h" />
     <ClInclude Include="cObject.h" />
     <ClInclude Include="cObjectManager.h" />
     <ClInclude Include="cRawLoader.h" />
     <ClInclude Include="cSkinnedMesh.h" />
+    <ClInclude Include="cSkinnedMeshManager.h" />
     <ClInclude Include="cTextureManager_inst.h" />
     <ClInclude Include="cTimerManager.h" />
+    <ClInclude Include="cZealot.h" />
     <ClInclude Include="DX_3D_STUDY.h" />
     <ClInclude Include="ObjLoader.h" />
     <ClInclude Include="Resource.h" />
@@ -195,16 +199,20 @@
     <ClCompile Include="cGrid.cpp" />
     <ClCompile Include="cHeightMap.cpp" />
     <ClCompile Include="cHexagon.cpp" />
+    <ClCompile Include="iMap.cpp" />
     <ClCompile Include="cLoadXFile.cpp" />
     <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="cMap.cpp" />
     <ClCompile Include="cMtlTex.cpp" />
+    <ClCompile Include="cOBB.cpp" />
     <ClCompile Include="cObject.cpp" />
     <ClCompile Include="cObjectManager.cpp" />
     <ClCompile Include="cRawLoader.cpp" />
     <ClCompile Include="cSkinnedMesh.cpp" />
+    <ClCompile Include="cSkinnedMeshManager.cpp" />
     <ClCompile Include="cTextureManager_inst.cpp" />
     <ClCompile Include="cTimerManager.cpp" />
+    <ClCompile Include="cZealot.cpp" />
     <ClCompile Include="DX_3D_STUDY.cpp" />
     <ClCompile Include="ObjLoader.cpp" />
     <ClCompile Include="stdafx.cpp">
