--- a/DX_3D_STUDY/DX_3D_STUDY.vcxproj.filters
+++ b/DX_3D_STUDY/DX_3D_STUDY.vcxproj.filters
@@ -28,6 +28,15 @@
     <Filter Include="Chracter">
       <UniqueIdentifier>{19f3114e-4d1c-426e-94ee-54e183a2470b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ASE_LOADER\Header">
+      <UniqueIdentifier>{8c912839-5499-460f-ad65-e36b1d7182fa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ASE_LOADER\Source">
+      <UniqueIdentifier>{c4afaa6f-25c1-4c85-af5b-da5580280252}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="OBB">
+      <UniqueIdentifier>{fb8c3505-258c-459c-8982-1575320263ce}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -81,12 +90,6 @@
     <ClInclude Include="Asciitok.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="cObject.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="cObjectManager.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="cMtlTex.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -111,15 +114,6 @@
     <ClInclude Include="cTimerManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="cASE_Char.h">
-      <Filter>ASE_LOADER</Filter>
-    </ClInclude>
-    <ClInclude Include="cASELoader.h">
-      <Filter>ASE_LOADER</Filter>
-    </ClInclude>
-    <ClInclude Include="cAseLoader_inst.h">
-      <Filter>ASE_LOADER</Filter>
-    </ClInclude>
     <ClInclude Include="cLoadXFile.h">
       <Filter>XFile</Filter>
     </ClInclude>
@@ -128,6 +122,33 @@
     </ClInclude>
     <ClInclude Include="cCharacter.h">
       <Filter>Chracter</Filter>
+    </ClInclude>
+    <ClInclude Include="cObject.h">
+      <Filter>ASE_LOADER\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="cAseLoader_inst.h">
+      <Filter>ASE_LOADER\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="cASELoader.h">
+      <Filter>ASE_LOADER\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="cASE_Char.h">
+      <Filter>ASE_LOADER\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="cObjectManager.h">
+      <Filter>ASE_LOADER\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="cSkinnedMeshManager.h">
+      <Filter>XFile</Filter>
+    </ClInclude>
+    <ClInclude Include="cOBB.h">
+      <Filter>OBB</Filter>
+    </ClInclude>
+    <ClInclude Include="cZealot.h">
+      <Filter>OBB</Filter>
+    </ClInclude>
+    <ClInclude Include="iMap.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -170,12 +191,6 @@
     <ClCompile Include="cCubeObj.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="cObject.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="cObjectManager.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="cMtlTex.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -200,15 +215,6 @@
     <ClCompile Include="cTimerManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="cAseLoader_inst.cpp">
-      <Filter>ASE_LOADER</Filter>
-    </ClCompile>
-    <ClCompile Include="cASELoader.cpp">
-      <Filter>ASE_LOADER</Filter>
-    </ClCompile>
-    <ClCompile Include="cASE_Char.cpp">
-      <Filter>ASE_LOADER</Filter>
-    </ClCompile>
     <ClCompile Include="cLoadXFile.cpp">
       <Filter>XFile</Filter>
     </ClCompile>
@@ -217,6 +223,33 @@
     </ClCompile>
     <ClCompile Include="cCharacter.cpp">
       <Filter>Chracter</Filter>
+    </ClCompile>
+    <ClCompile Include="cASE_Char.cpp">
+      <Filter>ASE_LOADER\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="cASELoader.cpp">
+      <Filter>ASE_LOADER\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="cAseLoader_inst.cpp">
+      <Filter>ASE_LOADER\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="cObject.cpp">
+      <Filter>ASE_LOADER\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="cObjectManager.cpp">
+      <Filter>ASE_LOADER\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="cSkinnedMeshManager.cpp">
+      <Filter>XFile</Filter>
+    </ClCompile>
+    <ClCompile Include="cOBB.cpp">
+      <Filter>OBB</Filter>
+    </ClCompile>
+    <ClCompile Include="cZealot.cpp">
+      <Filter>OBB</Filter>
+    </ClCompile>
+    <ClCompile Include="iMap.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
